syntax = "proto3";

package sekai.db;

import "sekai/db/proto/descriptor.proto";

message SpecialSeasonArea {
  option (master_db_file) = "specialSeasonAreas.json";
  enum SpecialSeasonAreaUseType {
    UNKNOWN_SPECIAL_SEASON_AREA_USE_TYPE = 0;
    AREA                                 = 1 [(json_value) = "area"];
    BGM                                  = 2 [(json_value) = "bgm"];
  }

  optional int32 id                                              = 1 [(json_name) = "id"];
  optional int32 special_season_id                               = 2 [(json_name) = "specialSeasonId"];
  optional int32 area_id                                         = 3 [(json_name) = "areaId"];
  optional string assetbundle_name                               = 4 [(json_name) = "assetbundleName"];
  optional string file_name                                      = 5 [(json_name) = "fileName"];
  optional SpecialSeasonAreaUseType special_season_area_use_type = 6 [(json_name) = "specialSeasonAreaUseType"];
}
